# cns-dpdk-next-sfc

./: .mailmap  .reviewboardrc  MAINTAINERS  Makefile  README_CDX.md  VERSION  meson_options.txt
.ci/: linux-build.sh
buildtools/: options-ibverbs-static.sh
config/: common_armv8a_linux  common_armv8a_linuxapp  common_base  common_linux  common_linuxapp
debian/: changelog  control  copyright  dpdk-doc.lintian-overrides  dpdk-init  dpdk.conf  gbp.conf  librte-acl22.symbols  librte-baseband-acc100-22.symbols  librte-baseband-fpga-5gnr-fec22.symbols  librte-baseband-fpga-lte-fec22.symbols  librte-baseband-null22.symbols  librte-baseband-turbo-sw22.symbols  librte-bbdev22.symbols  librte-bitratestats22.symbols  librte-bpf22.symbols  librte-bus-auxiliary.symbols  librte-bus-fslmc22.symbols  librte-bus-ifpga22.symbols  librte-bus-pci21.symbols  librte-bus-pci22.symbols  librte-bus-vdev22.symbols  librte-bus-vmbus22.symbols  librte-cfgfile22.symbols  librte-cmdline22.symbols  librte-common-cnxk21.symbols  librte-common-cnxk22.symbols  librte-common-cpt22.symbols  librte-common-dpaax22.symbols  librte-common-octeontx2-22.symbols  librte-common-octeontx22.symbols  librte-common-qat22.symbols  librte-common-sfc-efx21.symbols  librte-common-sfc-efx22.symbols  librte-compress-isal22.symbols  librte-compress-mlx5-21.symbols  librte-compress-mlx5-22.symbols  librte-compress-octeontx22.symbols  (+177 more)
drivers/: meson.build
drivers/net/pfe/: meson.build  pfe_ethdev.c
examples/cdma_demo/: Makefile  main.c  meson.build
examples/cdx_exerciser_test/: eftest_mcdi.c  main.c  meson.build
(+560 files in other folders)
